--- a/src/main/resources/com/novoUsuario.fxml
+++ b/src/main/resources/com/novoUsuario.fxml
@@ -40,6 +40,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.NovoUsuarioController">
   <children>
@@ -53,21 +55,27 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Ajuda">
           <items>
-            <MenuItem mnemonicParsing="false" text="Sobre" />
+            <MenuItem mnemonicParsing="false" onAction="#sobre" text="Sobre" />
           </items>
         </Menu>
       </menus>
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Label layoutX="132.0" layoutY="93.0" text="Login" />
-            <Label layoutX="132.0" layoutY="139.0" text="Nome" />
-            <Label layoutX="132.0" layoutY="192.0" text="Senha" />
-            <TextField fx:id="campoLogin" layoutX="199.0" layoutY="89.0" />
-            <TextField fx:id="campoNome" layoutX="199.0" layoutY="135.0" />
-            <TextField fx:id="campoSenha" layoutX="199.0" layoutY="188.0" />
-            <Button layoutX="199.0" layoutY="262.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="57.0" text="Limpar" />
-            <Button layoutX="291.0" layoutY="262.0" mnemonicParsing="false" onAction="#cadastrarUsuario" onDragDetected="#cadastrarUsuario" prefHeight="25.0" prefWidth="57.0" text="Salvar" />
+            <Label layoutX="189.0" layoutY="131.0" text="Login" />
+            <Label layoutX="187.0" layoutY="179.0" text="Nome" />
+            <Label layoutX="188.0" layoutY="233.0" text="Senha" />
+            <TextField fx:id="campoLogin" layoutX="246.0" layoutY="127.0" />
+            <TextField fx:id="campoNome" layoutX="246.0" layoutY="175.0" />
+            <TextField fx:id="campoSenha" layoutX="246.0" layoutY="229.0" />
+            <Button layoutX="218.0" layoutY="287.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="57.0" text="Limpar" />
+            <Button layoutX="366.0" layoutY="287.0" mnemonicParsing="false" onAction="#cadastrarUsuario" onDragDetected="#cadastrarUsuario" prefHeight="25.0" prefWidth="57.0" text="Salvar" />
+            <Text fill="#860b0b" layoutX="206.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
+               <font>
+                  <Font name="Times New Roman Bold Italic" size="50.0" />
+               </font>
+            </Text>
+            <Text fill="#7a7676" layoutX="267.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tela de Cadastro" />
       </children>
     </AnchorPane>
   </children>
