--- a/src/main/resources/com/telaPrincipal.fxml
+++ b/src/main/resources/com/telaPrincipal.fxml
@@ -32,31 +32,30 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.MenuController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.TelaPrincipalController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="Arquivo">
           <items>
-            <MenuItem mnemonicParsing="false" onAction="#sair" text="Sair" />
+            <MenuItem mnemonicParsing="false" onAction="#menu" text="Menu" />
+            <MenuItem mnemonicParsing="false" onAction="#sair" text="Fechar" />
           </items>
         </Menu>
-        <Menu mnemonicParsing="false" text="Usuario">
-          <items>
-            <MenuItem mnemonicParsing="false" onAction="#cadastrarUsuario" text="Cadastrar" />
-            <MenuItem mnemonicParsing="false" onAction="#listarUsuarios" text="Listar" />
-          </items>
-        </Menu>
+            <Menu mnemonicParsing="false" text="Conta">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#alterarCadastro" text="Alterar Cadastro" />
+                  <MenuItem mnemonicParsing="false" text="Excluir Conta" />
+              </items>
+            </Menu>
         <Menu mnemonicParsing="false" text="Ajuda">
           <items>
             <MenuItem mnemonicParsing="false" onAction="#sobre" text="Sobre" />
@@ -66,18 +65,13 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <Text fill="#860b0b" layoutX="207.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
+            <Text fill="#860b0b" layoutX="206.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
                <font>
                   <Font name="Times New Roman Bold Italic" size="50.0" />
                </font>
             </Text>
-            <TextField fx:id="campoLogin" layoutX="246.0" layoutY="139.0" />
-            <TextField fx:id="campoSenha" layoutX="246.0" layoutY="196.0" />
-            <Text layoutX="183.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login" wrappingWidth="45.443359375" />
-            <Text layoutX="183.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha" wrappingWidth="53.337890625" />
-            <Button layoutX="297.0" layoutY="253.0" mnemonicParsing="false" onAction="#entrar" text="Entrar" />
-            <Text fill="#7c7676" layoutX="284.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tela de Login" />
-            <Text fx:id="erroLogin" fill="#9a0000" layoutX="250.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" textOrigin="CENTER" />
-         </children></AnchorPane>
+            <Text layoutX="524.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tela Principal" />
+         </children>
+    </AnchorPane>
   </children>
 </VBox>
