--- a/src/main/resources/com/alterarCadastro.fxml
+++ b/src/main/resources/com/alterarCadastro.fxml
@@ -73,7 +73,7 @@
             <Text layoutX="148.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Novo Nome" />
             <Text layoutX="147.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nova Senha:" />
             <Button layoutX="326.0" layoutY="305.0" mnemonicParsing="false" onAction="#alterar" prefHeight="25.0" prefWidth="53.0" text="Entrar" />
-            <Button layoutX="230.0" layoutY="305.0" mnemonicParsing="false" text="Limpar" />
+            <Button layoutX="230.0" layoutY="305.0" mnemonicParsing="false" onAction="#limpar" text="Limpar" />
       </children>
     </AnchorPane>
   </children>
