--- a/src/main/resources/com/novoUsuario.fxml
+++ b/src/main/resources/com/novoUsuario.fxml
@@ -33,11 +33,12 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -62,20 +63,37 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Label layoutX="189.0" layoutY="131.0" text="Login" />
-            <Label layoutX="187.0" layoutY="179.0" text="Nome" />
-            <Label layoutX="188.0" layoutY="233.0" text="Senha" />
+            <ImageView id="imagem" fitHeight="338.0" fitWidth="648.0" layoutX="-4.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../java/com/util/shutterstock_451718692.jpg" />
+               </image>
+            </ImageView>
             <TextField fx:id="campoLogin" layoutX="246.0" layoutY="127.0" />
             <TextField fx:id="campoNome" layoutX="246.0" layoutY="175.0" />
             <TextField fx:id="campoSenha" layoutX="246.0" layoutY="229.0" />
             <Button layoutX="218.0" layoutY="287.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="57.0" text="Limpar" />
             <Button layoutX="366.0" layoutY="287.0" mnemonicParsing="false" onAction="#cadastrarUsuario" onDragDetected="#cadastrarUsuario" prefHeight="25.0" prefWidth="57.0" text="Salvar" />
-            <Text fill="#860b0b" layoutX="206.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
+            <Text fill="#860b0b" layoutX="206.0" layoutY="59.0" stroke="BLACK" strokeType="OUTSIDE" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
                <font>
-                  <Font name="Times New Roman Bold Italic" size="50.0" />
+                  <Font name="Times New Roman Bold Italic" size="65.0" />
                </font>
             </Text>
             <Text fill="#7a7676" layoutX="267.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tela de Cadastro" />
+            <Text fill="WHITE" layoutX="189.0" layoutY="145.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Login" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="187.0" layoutY="193.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Nome" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="187.0" layoutY="247.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Senha">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
       </children>
     </AnchorPane>
   </children>
