--- a/src/main/resources/com/telaPrincipal.fxml
+++ b/src/main/resources/com/telaPrincipal.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -48,7 +49,7 @@
       <menus>
         <Menu mnemonicParsing="false" text="Arquivo">
           <items>
-            <MenuItem mnemonicParsing="false" onAction="#menu" text="Menu" />
+            <MenuItem mnemonicParsing="false" onAction="#menu" text="Logout" />
             <MenuItem mnemonicParsing="false" onAction="#sair" text="Fechar" />
           </items>
         </Menu>
@@ -78,6 +79,10 @@
                </font>
             </Text>
             <Text layoutX="560.0" layoutY="27.0" stroke="WHITE" strokeType="OUTSIDE" text="Tela Principal" textAlignment="CENTER" underline="true" />
+            <Button layoutX="29.0" layoutY="136.0" mnemonicParsing="false" onAction="#cadastrarProdutor" text="Cadastrar Novo Produtor" />
+            <Button layoutX="29.0" layoutY="248.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Fazer Venda de Espaço" />
+            <Button layoutX="29.0" layoutY="210.0" mnemonicParsing="false" onAction="#listarProdutor" prefHeight="25.0" prefWidth="149.0" text="Listar Produtores" />
+            <Button layoutX="29.0" layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Alterar Cadastro" />
          </children>
     </AnchorPane>
   </children>
