--- a/src/main/resources/com/excluirProdutor.fxml
+++ b/src/main/resources/com/excluirProdutor.fxml
@@ -36,6 +36,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -43,7 +44,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.TelaPrincipalController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ExcluirProdutorController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -53,12 +54,6 @@
             <MenuItem mnemonicParsing="false" onAction="#sair" text="Fechar" />
           </items>
         </Menu>
-            <Menu mnemonicParsing="false" text="Conta">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#alterarCadastro" text="Alterar Cadastro" />
-                  <MenuItem mnemonicParsing="false" onAction="#excluirCadastro" text="Excluir Conta" />
-              </items>
-            </Menu>
         <Menu mnemonicParsing="false" text="Ajuda">
           <items>
             <MenuItem mnemonicParsing="false" onAction="#sobre" text="Sobre" />
@@ -67,24 +62,43 @@
       </menus>
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-         <children>
+      <children>
             <ImageView id="imagem" fitHeight="338.0" fitWidth="648.0" layoutX="-4.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../java/com/util/shutterstock_451718692.jpg" />
                </image>
             </ImageView>
+            <TextField fx:id="campoNome" layoutX="246.0" layoutY="138.0" />
+            <TextField fx:id="campoCPF" layoutX="246.0" layoutY="175.0" />
+            <TextField fx:id="campoEmail" layoutX="248.0" layoutY="221.0" />
+            <Button layoutX="367.0" layoutY="281.0" mnemonicParsing="false" onAction="#excluirProdutor" prefHeight="25.0" prefWidth="57.0" text="Salvar" />
+            <Button layoutX="220.0" layoutY="281.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="57.0" text="Limpar" />
+            <Button layoutX="38.0" layoutY="281.0" mnemonicParsing="false" onAction="#telaPrincipal" text="Voltar" />
             <Text fill="#860b0b" layoutX="206.0" layoutY="59.0" stroke="BLACK" strokeType="OUTSIDE" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
                <font>
                   <Font name="Times New Roman Bold Italic" size="65.0" />
                </font>
             </Text>
-            <Text layoutX="560.0" layoutY="27.0" stroke="WHITE" strokeType="OUTSIDE" text="Tela Principal" textAlignment="CENTER" underline="true" />
-            <Button layoutX="29.0" layoutY="99.0" mnemonicParsing="false" onAction="#cadastrarProdutor" text="Cadastrar Novo Produtor" />
-            <Button layoutX="29.0" layoutY="248.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Fazer Venda de Espaço" />
-            <Button layoutX="29.0" layoutY="175.0" mnemonicParsing="false" onAction="#listarProdutor" prefHeight="25.0" prefWidth="149.0" text="Listar Produtores" />
-            <Button layoutX="29.0" layoutY="136.0" mnemonicParsing="false" onAction="#alterarProdutor" prefHeight="25.0" prefWidth="149.0" text="Alterar Cadastro" />
-            <Button layoutX="29.0" layoutY="213.0" mnemonicParsing="false" onAction="#excluirProdutor" prefHeight="25.0" prefWidth="149.0" text="Excluir Produtor" />
-         </children>
+            <Text fill="WHITE" layoutX="268.0" layoutY="115.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Excluir Produtor">
+               <font>
+                  <Font size="14.0" />
+               </font></Text>
+            <Text fill="WHITE" layoutX="187.0" layoutY="156.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Nome" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="194.0" layoutY="193.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="CPF" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="186.0" layoutY="239.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="E-mail" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+      </children>
     </AnchorPane>
   </children>
 </VBox>
