--- a/src/main/resources/com/listarVenda.fxml
+++ b/src/main/resources/com/listarVenda.fxml
@@ -36,6 +36,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -43,49 +44,45 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.TelaPrincipalController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ListarVendaController">
   <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="Arquivo">
-          <items>
-            <MenuItem mnemonicParsing="false" onAction="#menu" text="Logout" />
-            <MenuItem mnemonicParsing="false" onAction="#sair" text="Fechar" />
-          </items>
-        </Menu>
-            <Menu mnemonicParsing="false" text="Conta">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#alterarCadastro" text="Alterar Cadastro" />
-                  <MenuItem mnemonicParsing="false" onAction="#excluirCadastro" text="Excluir Conta" />
-              </items>
+      <MenuBar>
+         <menus>
+            <Menu mnemonicParsing="false" text="Arquivo">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#menu" text="Menu" />
+                  <MenuItem mnemonicParsing="false" onAction="#telaPrincipal" text="Tela Principal" />
+                  <MenuItem mnemonicParsing="false" onAction="#sair" text="Fechar" />
+               </items>
             </Menu>
-        <Menu mnemonicParsing="false" text="Ajuda">
-          <items>
-            <MenuItem mnemonicParsing="false" onAction="#sobre" text="Sobre" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
+            <Menu mnemonicParsing="false" text="Ajuda">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#sobre" text="Sobre" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <ImageView id="imagem" fitHeight="338.0" fitWidth="648.0" layoutX="-4.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="imagem" fitHeight="348.0" fitWidth="666.0" layoutX="-11.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../java/com/util/shutterstock_451718692.jpg" />
                </image>
             </ImageView>
-            <Text fill="#860b0b" layoutX="206.0" layoutY="59.0" stroke="BLACK" strokeType="OUTSIDE" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
+            <Text fill="WHITE" layoutX="226.0" layoutY="121.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Lista de Usuarios:" wrappingWidth="188.419921875">
+               <font>
+                  <Font name="Times New Roman" size="25.0" />
+               </font>
+            </Text>
+            <TextArea fx:id="campoLista" editable="false" layoutX="59.0" layoutY="148.0" opacity="0.8" prefHeight="145.0" prefWidth="558.0" />
+            <Button layoutX="289.0" layoutY="309.0" mnemonicParsing="false" onAction="#listar" prefHeight="25.0" prefWidth="67.0" text="Listar" />
+            <Text fill="#860b0b" layoutX="224.0" layoutY="65.0" stroke="BLACK" strokeType="OUTSIDE" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
                <font>
                   <Font name="Times New Roman Bold Italic" size="65.0" />
                </font>
             </Text>
-            <Text layoutX="560.0" layoutY="27.0" stroke="WHITE" strokeType="OUTSIDE" text="Tela Principal" textAlignment="CENTER" underline="true" />
-            <Button layoutX="29.0" layoutY="99.0" mnemonicParsing="false" onAction="#cadastrarProdutor" text="Cadastrar Novo Produtor" />
-            <Button layoutX="460.0" layoutY="99.0" mnemonicParsing="false" onAction="#fazerVenda" prefHeight="25.0" prefWidth="149.0" text="Fazer Venda de Espaço" />
-            <Button layoutX="29.0" layoutY="175.0" mnemonicParsing="false" onAction="#listarProdutor" prefHeight="25.0" prefWidth="149.0" text="Listar Produtores" />
-            <Button layoutX="29.0" layoutY="136.0" mnemonicParsing="false" onAction="#alterarProdutor" prefHeight="25.0" prefWidth="149.0" text="Alterar Cadastro" />
-            <Button layoutX="29.0" layoutY="213.0" mnemonicParsing="false" onAction="#excluirProdutor" prefHeight="25.0" prefWidth="149.0" text="Excluir Produtor" />
-            <Button layoutX="460.0" layoutY="136.0" mnemonicParsing="false" onAction="#listarVenda" prefHeight="25.0" prefWidth="149.0" text="Listar Vendas" />
-         </children>
-    </AnchorPane>
+            <Button layoutX="501.0" layoutY="309.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="67.0" text="Limpar" />
+            <Button layoutX="87.0" layoutY="309.0" mnemonicParsing="false" onAction="#telaPrincipal" prefHeight="25.0" prefWidth="67.0" text="Voltar" />
+         </children></AnchorPane>
   </children>
 </VBox>
